<?xml version="1.0"?>
<package format="2">
  <name>robowflex</name>
  <version>0.0.1</version>
  <description>The Better Benchmarking Package</description>
  <maintainer email="zak@rice.edu">Zachary Kingston</maintainer>
  <author email="zak@rice.edu">Zachary Kingston</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>yaml-cpp</depend>
  <depend>moveit_ros_planning</depend>

  <export>
  </export>
</package>
