<?xml version="1.0"?>
<package format="2">
  <name>robowflex</name>
  <version>0.0.1</version>
  <description>The Better Benchmarking Package</description>
  <maintainer email="zak@rice.edu">Zachary Kingston</maintainer>
  <author email="zak@rice.edu">Zachary Kingston</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>yaml-cpp</depend>
  <depend>geometric_shapes</depend>
  <depend>eigen_conversions</depend>
  <depend>eigen</depend>
  <depend>moveit_ros_planning</depend>

  <exec_depend>moveit_planners_ompl</exec_depend>

  <export>
  </export>
</package>
