<?xml version="1.0"?>
<package format="2">
  <name>robowflex</name>
  <version>0.1.0</version>
  <description>The Better Benchmarking Package</description>
  <maintainer email="zak@rice.edu">Zachary Kingston</maintainer>
  <author email="zak@rice.edu">Zachary Kingston</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robowflex_library</exec_depend>
  <exec_depend>robowflex_ompl</exec_depend>
  <exec_depend>robowflex_tesseract</exec_depend>
  <exec_depend>robowflex_movegroup</exec_depend>
  <exec_depend>robowflex_visualization</exec_depend>
  <exec_depend>robowflex_dart</exec_depend>
  <exec_depend>robowflex_doc</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
