<?xml version="1.0"?>
<package format="2">
  <name>robowflex</name>
  <version>1.3.0</version>
  <description>Robowflex: Making MoveIt Easy!</description>

  <maintainer email="zak@rice.edu">Zachary Kingston</maintainer>
  <author email="zak@rice.edu">Zachary Kingston</author>

  <license>BSD</license>
  <url type="bugtracker">https://github.com/KavrakiLab/robowflex/issues</url>
  <url type="repository">https://github.com/KavrakiLab/robowflex</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robowflex_util</exec_depend>
  <exec_depend>robowflex_moveit</exec_depend>
  <exec_depend>robowflex_tesseract</exec_depend>
  <exec_depend>robowflex_visualization</exec_depend>
  <exec_depend>robowflex_dart</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
