<?xml version="1.0"?>
<package format="2">
  <name>robowflex_doc</name>
  <version>0.0.1</version>
  <description>Documentation for the robowflex project</description>
  <maintainer email="zak@rice.edu">Zachary Kingston</maintainer>
  <author email="zak@rice.edu">Zachary Kingston</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <doc_depend>doxygen</doc_depend>
  <doc_depend>dot</doc_depend>
</package>
