<?xml version="1.0"?>
<package format="2">
  <name>robowflex_library</name>
  <version>0.1.0</version>
  <description>Robowflex: Making MoveIt Easy</description>

  <maintainer email="zak@rice.edu">Zachary Kingston</maintainer>
  <author email="zak@rice.edu">Zachary Kingston</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>yaml-cpp</depend>
  <depend>hdf5</depend>
  <depend>tinyxml2</depend>
  <depend>geometric_shapes</depend>
  <depend>eigen_conversions</depend>
  <depend>eigen</depend>
  <depend>moveit_ros_planning</depend>
</package>
