<?xml version="1.0"?>
<package format="2">
  <name>robowflex_library</name>
  <version>1.3.0</version>
  <description>Core Robowflex Library</description>

  <maintainer email="zak@rice.edu">Zachary Kingston</maintainer>
  <author email="zak@rice.edu">Zachary Kingston</author>

  <license>BSD</license>
  <url type="bugtracker">https://github.com/KavrakiLab/robowflex/issues</url>
  <url type="repository">https://github.com/KavrakiLab/robowflex</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <depend>boost</depend>
  <depend>yaml-cpp</depend>
  <depend>tinyxml2</depend>
  <depend>eigen</depend>
  <depend>hdf5</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>object_recognition_msgs</depend>
  <depend>moveit_msgs</depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>urdf</depend>
  <depend>srdfdom</depend>
  <depend>pluginlib</depend>
  <depend>geometric_shapes</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>tf2_ros</depend>
  <depend>xmlrpcpp</depend>

  <exec_depend>moveit_kinematics</exec_depend>
</package>
