<?xml version="1.0"?>
<package format="2">
  <name>robowflex_movegroup</name>
  <version>0.0.1</version>
  <description>Interaction of robowflex with a live move_group process.</description>
  <maintainer email="zak@rice.edu">Zachary Kingston</maintainer>
  <author email="zak@rice.edu">Zachary Kingston</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>robowflex_library</depend>
  <depend>actionlib</depend>
  <depend>moveit_msgs</depend>
  <depend>yaml-cpp</depend>
</package>
