<?xml version="1.0"?>
<package format="2">
  <name>robowflex_movegroup</name>
  <version>0.1.0</version>
  <description>Robowflex: MoveIt MoveGroup Interaction</description>

  <maintainer email="zak@rice.edu">Zachary Kingston</maintainer>
  <author email="zak@rice.edu">Zachary Kingston</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>robowflex_library</depend>
  <depend>actionlib</depend>
  <depend>moveit_msgs</depend>
  <depend>yaml-cpp</depend>
</package>
